Fixed the safari footer layout issues.

--- a/public/stylesheets/css/pace.css
+++ b/public/stylesheets/css/pace.css
@@ -106,7 +106,7 @@ body {
 .outer-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
   width: 100%
 }
 
@@ -115,6 +115,7 @@ body {
   flex-grow: 2;
   width: 100%;
   background-color: #f8f8f8;
+  flex: 1;
 }
 
 .outer-footer-container {
